Add font family and size options.
- Don't minify in development.
- Search Google Fonts for the specified font.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"type": "module",
 	"module": "main.ts",
 	"scripts": {
-		"bundle": "bun build main.ts --minify --outfile .build/main.js",
+		"bundle": "bun build main.ts --outfile .build/main.js",
+		"minify": "bun bundle --minify",
 		"dev": "bun bundle && xdg-open index.html && bun bundle --watch"
 	},
 	"devDependencies": {
