--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
     - name: build
       run: |
         bun install
-        bun bundle
+        bun minify
 
     - uses: actions/upload-pages-artifact@v3
       with:
