Add languages, fonts & editor colors; save edits.
- Add `<title>`.
- Add font family placeholder.
- Fill in more colors.
- Focus editor on load.
- Focus hex inputs up or down by pressing arrow keys.
- Clean up.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"module": "main.ts",
 	"scripts": {
-		"bundle": "bun build main.ts --outfile .build/main.js",
+		"bundle": "bun build main.ts --outdir .build",
 		"minify": "bun bundle --minify",
 		"dev": "bun bundle && xdg-open index.html && bun bundle --watch"
 	},
@@ -15,6 +15,6 @@
 	},
 	"dependencies": {
 		"codemirror": "^6.0.1",
-		"@codemirror/lang-cpp": "^6.0.2"
+		"@codemirror/language-data": "^6.3.1"
 	}
 }
