Allow making new schemes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
+    "suppressImplicitAnyIndexErrors": true,
     "types": [
       "bun-types" // add Bun global
     ]
