Use `.build` as the website's root.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
 
     - uses: actions/upload-pages-artifact@v3
       with:
-        path: .
+        path: .build
 
     - uses: actions/deploy-pages@v4
